# mini-redis

./: Cargo.toml  Readme.md
src/: main.rs  service.rs  store.rs
